# utp-calculator

./: .gitignore  .gitmodules  Definitions.tex  LICENSE  MAIN.tex  PML.sty  Q-a-par-b-2.txt  README.md  RGAlg.sty  UTPCALC.bib  UTPCALC.tex  UTPCalc-MAIN.bib  UTPCalc-MAIN.tex  UTPCalc.sty  lsthaskell.sty  lstlhs.sty  package.yaml  stack.yaml  stack.yaml.orig  utpcalc.cabal  views.sty
archive/Root/: Q-a-or-b-2.txt  Q-a-or-b.txt  Q-a-par-b.txt  Q-a-seq-b-2.txt  Q-a-seq-b.txt  Q-iter-a.txt  a-par-bc.txt  a-seq-bc.txt  ab-chc-c.txt  ab-seq-c.txt  chc-assoc-a-b-c-example.txt  par-assoc-a-b-c-example.txt  seq-assoc-a-b-c-example.txt
doc/: Definitions.tex  Intro.tex  RGAlg.sty  UTPCALC.tex  UTPCalc.sty  doclevels.sty  views.sty
images/: atomic-action.eps  conditional-actual.eps  iteration-actual.eps  label-gen-example.eps  new-label.eps  par-comp-actual.eps  parallel-label-gen.eps  parallel-program.eps  seq-comp-actual.eps  seq-comp-idea.eps  split-gen.eps
papers/SBMF2017/: Abstract.tex  Intro.tex  Root.tex  UTCP-SBMF2017-MAIN.tex
papers/UTP2016/: Abstract.tex  Attempt4.eps  Conclusions.tex  ConclusionsX.tex  Definitions.tex  Design.tex  DesignX.tex  Dictionary.tex  Experience.tex  Expressions.tex  Future.tex  Impl.tex  ImplX.tex  Intro.tex  IntroX.tex  Laws.tex  PML.sty  Predicates.tex  Proof-Errors.txt  Related.tex  Theorising.tex  TheorisingX.tex  Types.tex  UTCP-in-Haskell.tex  UTCP-in-HaskellX.tex  UTPCalc-UTP2016-MAIN.bib  UTPCalc-UTP2016-MAIN.tex  UTPCalc.sty  Using.tex  calc-athenb.txt  clsthaskell.sty  clstlhs.sty  views.sty
papers/UTP2016/upload/: Abstract.tex  Design.tex  Expressions.tex  PML.sty  Predicates.tex  UTPCalc-UTP2016-MAIN.bib  UTPCalc-UTP2016-MAIN.tex  UTPCalc.sty  lsthaskell.sty  pprint-xmpl.eps  views.sty
src/: BUG.txt  BinOpProperties.txt  CCS2CSP.lhs  CalcAlphabets.lhs  CalcPredicates.lhs  CalcRecogniser.lhs  CalcRun.lhs  CalcSimplify.lhs  CalcSteps.lhs  CalcSysTypes.lhs  CalcTest.lhs  CalcTypes.lhs  CalcTypes.tex  CalcZipper.lhs  Definitions.tex  DemoCalcHighlighting.lhs  DictAbstractions.lhs  IOUtil.hs  Key-Type-Overview.txt  NiceSymbols.lhs  POrd.lhs  Precedences.tex  PrettyPrint.lhs  RGAlgebra.lhs  RGAlgebra.tex  Root.lhs  Scratch.lhs  SemCalcs.tex  SeqPML.lhs  StdAbstractions.lhs  StdExpressions.lhs  StdLaws.lhs  StdPrecedences.lhs  StdPredicates.lhs  StdSets.lhs  StdUTPLaws.lhs  StdUTPPrecedences.lhs  StdUTPPredicates.lhs  TRANSLIT.hs  TestCalc.lhs  (+19 more)
