name:                utpcalc
version:             0.3.0
synopsis:            UTP Calculator
license:             MIT
license-file:        LICENSE
author:              Andrew Butterfield
maintainer:          Andrew.Butterfield@scsstcd.ie
category:            Logic, Formal
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:  CalcPPrint
                    CalcTypes
                    CalcSysTypes
                    CalcAlphabets
                    CalcPredicates
                    CalcSimplify
                    CalcZipper
                    CalcSteps
                    CalcRecogniser
                    CalcRun
                    DictAbstractions
                    StdSets
                    StdPrecedences
                    StdPredicates
                    StdExpressions
                    StdLaws
                    StdUTPPrecedences
                    StdUTPPredicates
                    StdUTPLaws
                    Utilities
                    PLCDemo
  build-depends:  base, containers, nicesymbols, proglogcalc
  hs-source-dirs:     src/
  default-language:   Haskell2010

