name:                utpcalc
version:             0.3.0
synopsis:            UTP Calculator
license:             MIT
license-file:        LICENSE
author:              Andrew Butterfield
maintainer:          Andrew.Butterfield@scsstcd.ie
category:            Logic, Formal
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:  UTCPSemantics
                    UTCPLaws
                    UTCPCReduce
                    UTCPCalc
                    Root
                    RGAlgebra
                    Views


  build-depends:  base, containers, nicesymbols, proglogcalc
  hs-source-dirs:     src/
                      proglogcalc/src
                      proglogcalc/nicesymbols/src
                      
  default-language:   Haskell2010

