name:                utpcalc
version:             0.4.0
synopsis:            UTP Calculator
license:             MIT
license-file:        LICENSE
author:              Andrew Butterfield
maintainer:          Andrew.Butterfield@scsstcd.ie
category:            Logic, Formal
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:  UTCPSemantics
                    UTCPLaws
                    UTCPCReduce
                    UTCPCalc
                    Root
                    RGAlgebra
                    Views

                    CalcAlphabets
                    CalcPPrint
                    CalcPredicates
                    CalcRecogniser
                    CalcRun
                    CalcSimplify
                    CalcSteps
                    CalcSysTypes
                    CalcTypes
                    CalcZipper
                    DictAbstractions
                    POrd
                    StdExpressions
                    StdLaws
                    StdPrecedences
                    StdPredicates
                    StdSets
                    StdUTPLaws
                    StdUTPPrecedences
                    StdUTPPredicates
                    Utilities



  build-depends:  base, containers, nicesymbols, proglogcalc
  hs-source-dirs:     src/
                      proglogcalc/src

  default-language:   Haskell2010
